force-app/main/default/objects/Ifirma_Rest_Data__mdt/Ifirma_Rest_Data__mdt.object-meta.xml
<CustomObject>
    <label>Ifirma Rest Data</label>
    <pluralLabel>Ifirma Rest Data</pluralLabel>
</CustomObject>