force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Authorized_Person__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person__c</fullName>
    <label>Authorized Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>