force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>