force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Value__c</fullName>
    <label>Currency Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>