force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Email_Addresser__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresser__c</fullName>
    <label>Email Addresser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>