force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>