force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/Place_Of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Creation__c</fullName>
    <label>Place Of Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>