force-app/main/default/objects/Ifirma_Rest_Data__mdt/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>